Fix OTP rotation timing and prevent duplicate generations
- Updated OTP rotation from 30 seconds to 8 seconds across all components
- Fixed duplicate OTP generation issue by implementing single master interval
- Improved OTPGenerator with unified countdown and generation logic
- Added generation lock to prevent simultaneous OTP creation
- Updated rotation counter to start from #1 instead of #0
- Enhanced UI with better visual indicators and rotation tracking
- Updated README.md to reflect 8-second OTP rotation timing
- Fixed environment variable naming from QR_SECRET to OTP_SECRET
- Optimized interval management with proper cleanup on unmount
- Added console logging for debugging OTP generation timing

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "QR Attendance Management System",
-  "short_name": "QR Attendance",
-  "description": "Modern, secure QR-based attendance management for educational institutions",
+  "name": "OTP Attendance Management System",
+  "short_name": "OTP Attendance",
+  "description": "Modern, secure OTP-based attendance management for educational institutions",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
