--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
-# QR Code Encryption
-NEXT_PUBLIC_QR_SECRET=a7b9c3d5e8f2g4h6j9k1m3n7p2q5r8t1
+# OTP Code Encryption
+NEXT_PUBLIC_OTP_SECRET=a7b9c3d5e8f2g4h6j9k1m3n7p2q5r8t1
 
 # Admin Credentials
 ADMIN_EMAIL=admin@college.edu
